# CppActiveRecord

./: CMakeLists.txt  README.md
include/active_record/: attribute.h  base.h  connection.h  date.h  field.h  query.h  row.h  table.h  table_set.h
include/active_record/connection/: sqlite3.h
src/: active_record.cpp  attribute.cpp  connection.cpp  conversions.cpp  exception.cpp  field.cpp  row.cpp  table.cpp  table_set.cpp  type.cpp
src/sqlite/: sqlite3_attribute.cpp  sqlite3_connection.cpp  sqlite3_row.cpp  sqlite3_table.cpp
